Updated Auth flow Updated add and update admin responses
